- fixed using custom renderers in wxGrid which was broken in 2.3.2
- support for multiple images in one file added to wxImage (TIFF, GIF and ICO formats)
- support for CUR and ANI files in wxImage added (Chris Elliott)
- wxTextCtrl::GetRange() added
- added wxGetFontFromUser() convenience function
- added EVT_MENU_OPEN and EVT_MENU_CLOSE events
- added Hungarian translations (Janos Vegh)

wxMSW:

- small appearance fixes for native look under Windows XP
- refresh the buttons properly when the window is resized (Hans Van Leemputten)
- huge (40*) speed up in wxMask::Create()
- changing wxWindows styles also changes the underlying Windows window style
- wxTreeCtrl supports wxTR_HIDE_ROOT stle (George Policello)
- fixed flicker in wxTreeCtrl::SetItemXXX()
- fixed redraw problems in dynamically resized wxStaticText
- improvements to wxWindows applications behaviour when the system colours
  are changed
- fixed wxProgressDialog for ranges > 65535
- wxFontEnumerator now returns all fonts, not only TrueType ones
- bugs in handling wxFrame styles (border/caption related) fixed
- showing a dialog from EVT_RADIOBUTTON handler doesn't lead to an infinite
  recursion any more
- wxTextCtrl with wxTE_RICH flag scrolls to the end when text is appended to it
- the separators are not seen behind the controls added to the toolbar any more
- wxWindowDC and wxClientDC::GetSize() works correctly now

wxGTK:

- wxDirDialog now presents the file system in standard Unix way
- wxButton now honours wxBU_EXACTFIT
- wxStaticBox now honours wxALIGN_XXX styles
- added support for non alphanumeric simple character accelerators ('-', '=')

wxHTML:

- fixed wxHtmlHelpController's cache files handling on big endian machines
- added blocking and redirecting capabilities to wxHtmlWindow via
  wxHtmlWindow::OnOpeningURL()
- fixed alignment handling in tables
- fixed <font face="..."> handling to be case insensitive

2.3.2
-----

New port: wxUniv for Win32/GTK+ is now included in the distribution.
